Widen line item code column to prevent text clipping
The 64px column was too narrow once table cell and input padding were
subtracted, clipping codes like "1.00" to "1.0".

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -276,7 +276,7 @@ select:focus {
 }
 
 .col-code {
-  width: 64px;
+  width: 90px;
 }
 
 .col-date {
